--- a/homework/Assignment 1.ipynb
+++ b/homework/Assignment 1.ipynb
@@ -33,7 +33,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "I would like to know more about computer security against hacking, viruses and malware.\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -47,7 +49,12 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "https://www2.ed.gov/about/inits/ed/edfacts/data-files/index.html#acgr\n",
+    "\n",
+    "\n",
+    "This data set has to do with graduation rates. Click on the link, scroll down to the subtitle \"Adjusted Graduation,\" choose the year,16-17, then click on \"documentation\" for the access. "
+   ]
   },
   {
    "cell_type": "markdown",
