--- a/classes/Week 2.ipynb
+++ b/classes/Week 2.ipynb
@@ -22,7 +22,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -178,6 +177,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "This is **Markdown**."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "##### Markdown\n",
     "\n",
     "There's a useful cheatsheet for Markdown here: https://github.com/adam-p/markdown-here/wiki/Markdown-Cheatsheet. For examples, you can try editing this notebook or looking at the `README.md` file in the repository (It's the syllabus in Markdown format."
@@ -246,10 +252,17 @@
     "some_float = 10.0\n",
     "some_other_float = float(10)\n",
     "\n",
+    "_varname = 50\n",
+    "\n",
     "print(some_string)\n",
     "print(some_integer)\n",
     "print(some_float)\n",
-    "print(some_other_float)"
+    "print(some_other_float)\n",
+    "\n",
+    "\n",
+    "_varname\n",
+    "\n",
+    "type(some_string)"
    ]
   },
   {
