--- a/classes/Week 4.ipynb
+++ b/classes/Week 4.ipynb
@@ -217,6 +217,10 @@
     }
    ],
    "source": [
+    "# the % is to keep the remainder of a number for example 40/10 = 4, remainder 1. the % will keep the number.\n",
+    "# ** is to signify the \"square\" or to the \"power of\"\n",
+    "# % 2 is a shorthand way of asking if it it's even or odd?\n",
+    "\n",
     "mylist = []\n",
     "for x in range(1, 51):\n",
     "    if x % 2:\n",
@@ -266,14 +270,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['H', 'a', 's', 'w']\n"
+     ]
+    }
+   ],
    "source": [
     "def first_letters(words):\n",
     "    #Replace [] with your code.\n",
     "    output = []\n",
-    "    return output"
+    "    for i in words:\n",
+    "        output.append(i[0])\n",
+    "    return output\n",
+    "print(first_letters(['Here', 'are', 'some', 'words']))"
    ]
   },
   {
@@ -303,26 +318,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "def first_letters_except(words, stopwords):\n",
     "    #Replace [] with your code.\n",
     "    output = []\n",
+    "    for i in words:\n",
+    "        if i in stopwords:\n",
+    "            output.append(\"none\")\n",
+    "        else:\n",
+    "            output.append(i[0])\n",
     "    return output"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[]\n"
+      "['A', 'p', 'p', 'none', 's', 'p', 'none', 'F', 'p', 'none', 'm', 'p', 's']\n"
      ]
     }
    ],
