--- a/homework/Assignment 4.ipynb
+++ b/homework/Assignment 4.ipynb
@@ -20,26 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "True\n",
-      "True\n"
-     ]
-    }
-   ],
-   "source": [
-    "print('this' in ['this', 'that', 'other'])\n",
-    "print('was' in 'washes')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -57,10 +38,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 3, 2, 4, 4, 2, 5, 5, 3, 4, 4, 5, 4, 4, 5, 4, 2, 5, 3, 5, 3, 3, 4, 2, 5, 1, 5, 4, 1, 5, 5, 2, 4, 5, 2, 5, 3, 5, 1, 5, 2, 5, 5, 2, 1, 5, 4]\n",
+      "[2, 3, 2, 4, 4, 2, 5, 5, 3, 4, 4, 5, 4, 4, 5, 4, 2, 5, 3, 5, 3, 3, 4, 2, 5, 1, 5, 4, 1, 5, 5, 2, 4, 5, 2, 5, 3, 5, 1, 5, 2, 5, 5, 2, 1, 5, 4]\n"
+     ]
+    }
+   ],
+   "source": [
+    "lengths2 = [len(word) if len(word) <= 5 else 5 for word in words]\n",
+    "print(lengths2)\n",
+    "\n",
+    "lengths2 = [min(len(word), 5) for word in words]\n",
+    "print(lengths2)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -88,7 +84,29 @@
     }
    ],
    "source": [
+    "# the min() function is to find the minimun or loset number. Can only compare two things at once\n",
+    "# I can also write min (8, 6, 9+6) and this will find the \n",
     "min(len(\"Whatever\"), 6)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "min(8,5+7,5,9,0)"
    ]
   },
   {
@@ -118,24 +136,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
     "def first_letters_except2(words, stopwords):\n",
-    "    pass"
+    "    output = []\n",
+    "    for i in words:\n",
+    "        if i not in stopwords:\n",
+    "            output.append(i[0])\n",
+    "    return output"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "None\n"
+      "['A', 'p', 'p', 't', 's', 'p', 'o', 'F', 'p', 'f', 'm', 'p', 's']\n"
      ]
     }
    ],
@@ -163,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -172,7 +194,7 @@
        "'4.7.1'"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -184,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -193,7 +215,7 @@
        "'2.22.0'"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
