--- a/classes/Week 3.ipynb
+++ b/classes/Week 3.ipynb
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -105,12 +105,24 @@
       "G\n",
       "I\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'DF'"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "# Subscripting\n",
     "for x in mystring[::2]:\n",
-    "    print(x)"
+    "    print(x)\n",
+    "\n",
+    "mystring [3:7:2]"
    ]
   },
   {
@@ -126,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -135,7 +147,7 @@
        "'i'"
       ]
      },
-     "execution_count": 158,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -147,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -156,7 +168,7 @@
        "'string'"
       ]
      },
-     "execution_count": 130,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -176,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -192,7 +204,7 @@
        "range(5, 10, 2)"
       ]
      },
-     "execution_count": 131,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -213,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -241,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -250,7 +262,7 @@
        "'i'"
       ]
      },
-     "execution_count": 133,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -262,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -271,7 +283,7 @@
        "range(0, 4)"
       ]
      },
-     "execution_count": 134,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -283,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -309,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -318,7 +330,7 @@
        "['This', 'is', 'a', 'string.']"
       ]
      },
-     "execution_count": 136,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -330,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -339,7 +351,7 @@
        "'a'"
       ]
      },
-     "execution_count": 137,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -350,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -359,7 +371,7 @@
        "['a', 'string.']"
       ]
      },
-     "execution_count": 138,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -377,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -396,15 +408,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "can't assign to literal (<ipython-input-140-391df3560ba5>, line 2)",
+     "evalue": "can't assign to literal (<ipython-input-59-391df3560ba5>, line 2)",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-140-391df3560ba5>\"\u001b[1;36m, line \u001b[1;32m2\u001b[0m\n\u001b[1;33m    10 = myint\u001b[0m\n\u001b[1;37m              ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m can't assign to literal\n"
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-59-391df3560ba5>\"\u001b[1;36m, line \u001b[1;32m2\u001b[0m\n\u001b[1;33m    10 = myint\u001b[0m\n\u001b[1;37m              ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m can't assign to literal\n"
      ]
     }
    ],
@@ -415,18 +427,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ok\n",
-      "ok\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Equality test: order doesn't matter.\n",
     "if 10 == myint:\n",
@@ -454,19 +457,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'John': 938477566, 'Jack': 938377264}\n",
-      "938377264\n",
-      "{'John': 938477566, 'Jack': 938377264, 'Jill': 947662781}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "phonebook = {\n",
     "    \"John\" : 938477566,\n",
@@ -507,17 +500,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "A. Cau, R. Kuiper, and W.-P. de Roever.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "citation = {\n",
     "    'author':             'A. Cau, R. Kuiper, and W.-P. de Roever.',\n",
@@ -531,7 +516,7 @@
     "\n",
     "print(citation['author'])\n",
     "\n",
-    "citations = []\n",
+    "citations = [] \n",
     "citations.append(citation)"
    ]
   },
@@ -544,10 +529,104 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "M. Kitsuregawa, H. Tanaka, and T. Moto-oka.\n",
+      "Application of hash to data base machine and its architecture.\n",
+      "New Generation Computing, 1(1),\n",
+      "1992.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# I didn't include any functions for values that had \"none\" written next to them\n",
+    "\n",
+    "citation = {\n",
+    "    'author':'M. Kitsuregawa, H. Tanaka, and T. Moto-oka.',\n",
+    "    'title':\"Application of hash to data base machine and its architecture.\",\n",
+    "    'journal': None,\n",
+    "    'volume': None,\n",
+    "    'number': None,\n",
+    "    'book_title': \"New Generation Computing, 1(1),\",\n",
+    "    'date': '1992.'\n",
+    "}\n",
+    "\n",
+    "print(citation['author'])\n",
+    "print (citation['title'])\n",
+    "print (citation[\"book_title\"])\n",
+    "print (citation[\"date\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A. Cau, R. Kuiper, and W.-P. de Roever.\n",
+      "Formalising Dijkstra's development strategy within Stark's formalism.\n",
+      "Proc. 5th. BCS-FACS Refinements Workshop\n",
+      "1992.\n"
+     ]
+    }
+   ],
+   "source": [
+    "citation = {\n",
+    "    \"author\":\"A. Cau, R. Kuiper, and W.-P. de Roever.\",\n",
+    "    \"title\":\"Formalising Dijkstra's development strategy within Stark's formalism.\",\n",
+    "    \"journal\":\"none\",\n",
+    "    \"volume\":\"none\",\n",
+    "    \"number\":\"none\",\n",
+    "    \"book_title\":\"Proc. 5th. BCS-FACS Refinements Workshop\",\n",
+    "    \"date\":\"1992.\"\n",
+    "}\n",
+    "\n",
+    "print (citation[\"author\"])\n",
+    "print (citation[\"title\"])\n",
+    "print (citation[\"book_title\"])\n",
+    "print (citation[\"date\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Marc Shapiro and Susan Horwitz.\n",
+      "Fast and accurate flow-insensitive points-to analysis.\n",
+      "In Proceedings of the 24th Annual ACM Symposium on Principles of Programming Languages\n",
+      "January 1997.\n"
+     ]
+    }
+   ],
+   "source": [
+    "citation = {\n",
+    "    \"author\":\"Marc Shapiro and Susan Horwitz.\",\n",
+    "    \"title\":\"Fast and accurate flow-insensitive points-to analysis.\",\n",
+    "    \"journal\":\"none\",\n",
+    "    \"volume\":\"none\",\n",
+    "    \"number\":\"none\",\n",
+    "    \"book_title\":\"In Proceedings of the 24th Annual ACM Symposium on Principles of Programming Languages\",\n",
+    "    \"date\":\"January 1997.\"\n",
+    "}\n",
+    "\n",
+    "print (citation[\"author\"])\n",
+    "print (citation[\"title\"])\n",
+    "print (citation[\"book_title\"])\n",
+    "print (citation[\"date\"])"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -567,20 +646,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "3"
-      ]
-     },
-     "execution_count": 145,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "len(range(5,20,5))"
    ]
@@ -594,22 +662,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hello\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def say_hello():\n",
     "    print('Hello')\n",
     "    \n",
-    "say_hello()"
+    "say_hello()\n",
+    "\n",
+    "def you_tube ():\n",
+    "    print (\"Tutorials\")\n",
+    "\n",
+    "you_tube()"
    ]
   },
   {
@@ -621,17 +686,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "A. Cau, R. Kuiper, and W.-P. de Roever.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def cite_author(cite):\n",
     "    print(cite['author'])\n",
@@ -641,20 +698,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "\"Formalising Dijkstra's development strategy within Stark's formalism.  1992.\""
-      ]
-     },
-     "execution_count": 148,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "def cite_title_date(cite):\n",
     "    outp = cite['title']\n",
@@ -712,7 +758,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -727,23 +773,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['A. Cau', ' R. Kuiper', ' and W.-P. de Roever.']"
+       "'Marc Shapiro and Susan Horwitz.'"
       ]
      },
-     "execution_count": 150,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "c = Citation(citations[0])\n",
-    "c.names()"
+    "c = Citation(citation)\n",
+    "c.author"
    ]
   },
   {
@@ -795,20 +841,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'.'"
-      ]
-     },
-     "execution_count": 151,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pathlib\n",
     "p = pathlib.Path('.')\n",
@@ -826,20 +861,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'.'"
-      ]
-     },
-     "execution_count": 152,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from pathlib import Path\n",
     "p = Path('.')\n",
@@ -857,20 +881,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'.'"
-      ]
-     },
-     "execution_count": 153,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from pathlib import Path as path\n",
     "p = path('.')\n",
@@ -888,7 +901,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -905,21 +918,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      " T. Fahringer, R. Blasko, and H. Zima. \n",
-      " A. D. Kallis and D. Klappholz, \n",
-      " R. Fletcher. \n",
-      " Clark, K. L., \n",
-      " Gent, I. P., & Walsh, T. \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import xml.etree.ElementTree as ET\n",
     "root = ET.fromstring(xml)\n",
@@ -940,6 +941,49 @@
    "source": [
     "Write a function that takes the `xml` string above and prints each citation's `title`, `editor` (if it exists), and `date` (if it exists)."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " Automatic performance prediction to support parallelization of Fortran programs for massively parallel systems. \n",
+      " July 1992. \n",
+      " ``Reaching definitions analysis on code containing array references,'' \n",
+      " Aug. 1991. \n",
+      " Practical Methods of Optimization. \n",
+      " 1987. \n",
+      " Negation as Failure, \n",
+      " in: H. Gallaire and J. Minker (eds.), \n",
+      " 1978. \n",
+      " Easy problems are sometimes hard. \n",
+      " (1994a). \n"
+     ]
+    }
+   ],
+   "source": [
+    "#!= means not equal to\n",
+    "\n",
+    "for i in root:\n",
+    "    print(i.find('title').text)\n",
+    "    if i.find('editor') != None:\n",
+    "        print(i.find('editor').text)\n",
+    "    if i. find ('date') != None:\n",
+    "        print (i.find ('date').text)\n",
+    "\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
