--- a/homework/Assignment 2.ipynb
+++ b/homework/Assignment 2.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,10 +27,38 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ABCD\n",
+      "FGHIJ\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(string1[:4])\n",
+    "print(string1[5:])\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "#### 2. Save the length of `string1` to a new variable called `length1`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lenght1_string1 = len(string1)"
    ]
   },
   {
@@ -41,10 +69,57 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "int"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(len_string1)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "#### 4. Loop over `range(length1)` and print the type of each item. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 <class 'int'>\n",
+      "1 <class 'int'>\n",
+      "2 <class 'int'>\n",
+      "3 <class 'int'>\n",
+      "4 <class 'int'>\n",
+      "5 <class 'int'>\n",
+      "6 <class 'int'>\n",
+      "7 <class 'int'>\n",
+      "8 <class 'int'>\n",
+      "9 <class 'int'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "for a in range(len_string1):\n",
+    "    print(a, type(a))\n"
    ]
   },
   {
@@ -55,6 +130,25 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "G\n"
+     ]
+    }
+   ],
+   "source": [
+    "string1 = string1\n",
+    "\n",
+    "print (string1[6])"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -62,10 +156,51 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ABC\n"
+     ]
+    }
+   ],
+   "source": [
+    "print (string2[:3])"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "#### 7. Loop over string1 and print every other letter in it."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A\n",
+      "C\n",
+      "E\n",
+      "G\n",
+      "I\n"
+     ]
+    }
+   ],
+   "source": [
+    "for a in string1[::2]:\n",
+    "        print(a)\n",
+    "    \n",
+    "    \n"
    ]
   },
   {
@@ -83,6 +218,43 @@
     "...\n",
     "```"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A A\n",
+      "B B\n",
+      "C C\n",
+      "D D\n",
+      "E D\n",
+      "F F\n",
+      "G G\n",
+      "H H\n",
+      "I I\n",
+      "J I\n"
+     ]
+    }
+   ],
+   "source": [
+    "# when a question is somewhat suggestion an action that repeats itself, it's asking for a loop.\n",
+    "#range cant be used on a string\n",
+    "\n",
+    "for i in range(len_string1):\n",
+    "    print(string1[i], string2[i])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
