--- a/homework/Assignment 3.ipynb
+++ b/homework/Assignment 3.ipynb
@@ -40,10 +40,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'xml.etree.ElementTree.Element' object has no attribute 'complete'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-4-e40259e7690b>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      5\u001b[0m     \u001b[0mcitations\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mcitation\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mcitation\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mcitations\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 7\u001b[1;33m     \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mcitation\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcomplete\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m: 'xml.etree.ElementTree.Element' object has no attribute 'complete'"
+     ]
+    }
+   ],
+   "source": [
+    "# create a new list\n",
+    "# for each citation in the xml\n",
+    "    #create the dictionary\n",
+    "    #add the information\n",
+    "    #create a citation object\n",
+    "\n",
+    "newlist = []\n",
+    "\n",
+    "citation = {\n",
+    "    \"author\":\"Marc Shapiro and Susan Horwitz.\",\n",
+    "    \"title\":\"Fast and accurate flow-insensitive points-to analysis.\",\n",
+    "    \"journal\":\"none\",\n",
+    "    \"volume\":\"none\",\n",
+    "    \"number\":\"none\",\n",
+    "    \"book_title\":\"In Proceedings of the 24th Annual ACM Symposium on Principles of Programming Languages\",\n",
+    "    \"date\":\"January 1997.\"\n",
+    "}\n"
+   ]
   },
   {
    "cell_type": "markdown",
