--- a/classes/Week 3.ipynb
+++ b/classes/Week 3.ipynb
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -105,24 +105,17 @@
       "G\n",
       "I\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'DF'"
-      ]
-     },
-     "execution_count": 47,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
     "# Subscripting\n",
+    "\n",
+    "mystring = \"ABCDEFGHIJ\"\n",
+    "\n",
     "for x in mystring[::2]:\n",
     "    print(x)\n",
     "\n",
-    "mystring [3:7:2]"
+    "#mystring [3:7:2]"
    ]
   },
   {
@@ -188,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -204,7 +197,7 @@
        "range(5, 10, 2)"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
