--- a/homework/Assignment 5.ipynb
+++ b/homework/Assignment 5.ipynb
@@ -19,7 +19,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Because my data set was so large, I had to limit the amount of information to be drawn from. The way that I accomlished that was by adding a an if statement to break Data after 1000. I expect to do this to review all the data, continuosly break them in chunks in order for Jupyter to read the information."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -32,7 +34,30 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "'STNAM', 'FIPST', 'LEAID', 'ST_LEAID', 'LEANM', 'ALL_COHORT_1617', 'ALL_RATE_1617', 'MAM_COHORT_1617', 'MAM_RATE_1617', 'MAS_COHORT_1617', 'MAS_RATE_1617', 'MBL_COHORT_1617', 'MBL_RATE_1617', 'MHI_COHORT_1617', 'MHI_RATE_1617', 'MTR_COHORT_1617', 'MTR_RATE_1617', 'MWH_COHORT_1617', 'MWH_RATE_1617', 'CWD_COHORT_1617', 'CWD_RATE_1617', 'ECD_COHORT_1617', 'ECD_RATE_1617', 'LEP_COHORT_1617', 'LEP_RATE_1617', 'DATE_CUR'\n",
+    "\n",
+    "DATE_CUR\tCharacter\n",
+    "ALL_COHORT_1617\tNumber\n",
+    "ALL_RATE_1617\tCharacter\n",
+    "MAM_COHORT_1617\tNumber\n",
+    "MAM_RATE_1617\tCharacter\n",
+    "MAS_COHORT_1617\tNumber\n",
+    "MAS_RATE_1617\tCharacter\n",
+    "MBL_COHORT_1617\tNumber\n",
+    "MBL_RATE_1617\tCharacter\n",
+    "MHI_COHORT_1617\tNumber\n",
+    "MHI_RATE_1617\tCharacter\n",
+    "MTR_COHORT_1617\tNumber\n",
+    "MTR_RATE_1617\tCharacter\n",
+    "MWH_COHORT_1617\tNumber\n",
+    "MWH_RATE_1617\tCharacter\n",
+    "CWD_COHORT_1617\tNumber\n",
+    "CWD_RATE_1617\tCharacter\n",
+    "ECD_COHORT_1617\tNumber\n",
+    "ECD_RATE_1617\tCharacter\n",
+    "LEP_COHORT_1617\tNumber\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -44,7 +69,11 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "1. Which State Had the most suscessfu graduation rate?\n",
+    "2. Which had the least?\n",
+    "3. Which region had the best rates?"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -55,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -64,7 +93,7 @@
        "'1.2.0'"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -76,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -85,7 +114,7 @@
        "'2.6.2'"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
