--- a/homework/Assignment 4.ipynb
+++ b/homework/Assignment 4.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -29,11 +29,69 @@
      "text": [
       "['If', 'you', 'do', 'much', 'work', 'on', 'computers,', 'eventually', 'you', 'find', 'that', 'there’s', 'some', 'task', 'you’d', 'like', 'to', 'automate.', 'For', 'example,', 'you', 'may', 'wish', 'to', 'perform', 'a', 'search-and-replace', 'over', 'a', 'large', 'number', 'of', 'text', 'files,', 'or', 'rename', 'and', 'rearrange', 'a', 'bunch', 'of', 'photo', 'files', 'in', 'a', 'complicated', 'way.']\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[False,\n",
+       " False,\n",
+       " False,\n",
+       " False,\n",
+       " False,\n",
+       " False,\n",
+       " False,\n",
+       " True,\n",
+       " False,\n",
+       " False,\n",
+       " True,\n",
+       " False,\n",
+       " False,\n",
+       " True,\n",
+       " False,\n",
+       " False,\n",
+       " False,\n",
+       " True,\n",
+       " False,\n",
+       " True,\n",
+       " False,\n",
+       " True,\n",
+       " False,\n",
+       " False,\n",
+       " False,\n",
+       " True,\n",
+       " True,\n",
+       " False,\n",
+       " True,\n",
+       " True,\n",
+       " False,\n",
+       " False,\n",
+       " False,\n",
+       " False,\n",
+       " False,\n",
+       " True,\n",
+       " True,\n",
+       " True,\n",
+       " True,\n",
+       " False,\n",
+       " False,\n",
+       " False,\n",
+       " False,\n",
+       " False,\n",
+       " True,\n",
+       " True,\n",
+       " True]"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "words = \"If you do much work on computers, eventually you find that there’s some task you’d like to automate. For example, you may wish to perform a search-and-replace over a large number of text files, or rename and rearrange a bunch of photo files in a complicated way.\".split()\n",
-    "print(words)"
+    "print(words) \n",
+    "alist=['a' in word for word in words]\n",
+    "alist"
    ]
   },
   {
